Fix size of home screen on mobile

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -48,3 +48,14 @@
     height: 100%;
   }
 }
+// Pne Media Query
+@media screen and (max-width: 426px) {
+  #hero {
+    .heroText {
+      width: 100%;
+      span {
+        display: block;
+      }
+    }
+  }
+}
